# RAG-Learning

./: README.md  pyproject.toml  requirements.txt
data/text_files/: machine_learning_intro.txt  sample_document.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  pdf_loader.ipynb
